Thu Jan 22 11:33:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_time_timeval): made a real prototype.  a patch from
	  Marcus Rueckert <darix AT opensu.se> at [ruby-core:21492].

Wed Jan 21 21:43:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_ungetbyte, rb_io_ungetc): allows nil to reset EOF
	  flag with ungetting nothing.

	* ruby.c (load_file_internal): rests EOF flag to make possible to
	  load from stdin after reading data.

Wed Jan 21 15:32:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_ungetbyte, rb_io_ungetc): clears EOF flag.

Wed Jan 21 13:58:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/io.h (FMODE_EOF): EOF flag on TTY.

	* io.c (io_set_eof): sets EOF flag for TTY.

	* io.c (io_seek): clears EOF flag.

	* io.c (io_fillbuf): returns EOF if already met EOF.  [ruby-dev:37798]

	* io.c (io_fillbuf, io_fread, io_getpartial): sets EOF.

Wed Jan 21 14:41:48 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* array.c (take_items): to_ary() raises ArgumentError if cannot to
	  convert to Array. [ruby-dev:37797]

Wed Jan 21 21:12:47 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* introduces r21693 again for merging r21713.

Tue Jan 20 19:12:18 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* reverts r21693.

Tue Jan 20 18:49:59 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/rdoc/ri/path.rb: Gem::Enable was removed.
	  Use just defined?(Gem).
	  And this prevents unexpected directory creation at
	  installation. [ruby-core:20990]

Tue Jan 20 17:59:52 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Reverts r21598 and r21599 because the original behavior is
	  intentional.

Tue Jan 20 09:26:05 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (nkf_buf_push): maybe a bug.

	* ext/nkf/nkf-utf8/nkf.c (options): no need to support help option.

Tue Jan 20 06:48:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (take_items), enum.c (enum_zip): tries to convert to